--- a/src/materials/calculus/derivative/implicit.mdx
+++ b/src/materials/calculus/derivative/implicit.mdx
@@ -20,7 +20,8 @@ $$
 # Implicit Differentiation: Example
 
 <Example>
-Given $x^3y^2+\tan{y}=x^2-4y$, find $\frac{dy}{dx}$ using implicit differentiation.
+  Given $x^3y^2+\tan{y}=x^2-4y$, find $\frac{dy}
+  {dx}$ using implicit differentiation.
 </Example>
 
 $$
@@ -45,8 +46,16 @@ The following describes an attempt on using implicit differentiation to find $\f
 
 Select all options below that are TRUE.
 
-<Option id="implicit-1" content="The attempt went wrong from step A onwards." />
-<Option id="implicit-2" content="The attempt went wrong from step B onwards." />
-<Option id="implicit-3" content="The attempt went wrong from step C onwards." />
-<Option id="implicit-4" content="Regardless of whether the past steps are correct or not, the final rewriting of the answer after step D is correct."  truth />
-<Option id="implicit-5" content="The attempt produced a correct answer in step D." truth />
+<Option id="implicit" content="The attempt went wrong from step A onwards." />
+<Option id="implicit" content="The attempt went wrong from step B onwards." />
+<Option id="implicit" content="The attempt went wrong from step C onwards." />
+<Option
+  id="implicit"
+  content="Regardless of whether the past steps are correct or not, the final rewriting of the answer after step D is correct."
+  truth
+/>
+<Option
+  id="implicit"
+  content="The attempt produced a correct answer in step D."
+  truth
+/>
