feat: working on quiz (wip)

--- a/src/materials/calculus/derivative-applications/examples.mdx
+++ b/src/materials/calculus/derivative-applications/examples.mdx
@@ -11,9 +11,7 @@ Two curves are orthogonal if their tangent lines are perpendicular at each point
 # Tangent Lines and Normal Lines: Example
 
 <Example>
-  Given $f(x)=\frac{x ^ 2}
-  {2}-2$, find the equation of the tangent line to $f$ on $x=2$, as well as the normal
-  line.
+  Given $f(x)=\frac{x ^ 2}{2}-2$, find the equation of the tangent line to $f$ on $x=2$, as well as the normal line.
 </Example>
 
 Derive $f$:
