--- a/src/materials/calculus/derivative/definition.mdx
+++ b/src/materials/calculus/derivative/definition.mdx
@@ -19,11 +19,10 @@ Derivatives have different notations, but they still have the same meaning. The 
 # Example of Derivative
 
 <Example>
-  Provided $f(x) = 4x^2 - 4x + 1$: 1. Calculate $f'(x)$. 2. At which rate is $f$
-  changing at $x = \frac{1}
-  {4}$? 3. What is the equation of the tangent line to the graph of the function
-  $f$ at $x = \frac{1}
-  {4}$?
+  Provided $f(x) = 4x^2 - 4x + 1$:
+	1. Calculate $f'(x)$.
+	2. At which rate is $f$ changing at $x = \frac{1} {4}$?
+	3. What is the equation of the tangent line to the graph of the function $f$ at $x = \frac{1}{4}$?
 </Example>
 
 **Number 1**  
