--- a/src/materials/calculus/derivative/trigonometric.mdx
+++ b/src/materials/calculus/derivative/trigonometric.mdx
@@ -63,43 +63,9 @@ $$
 
 # **Practice:** Trigonometric Derivatives
 
-Let $f(x)=\frac{2 \tan{4x} }{2 - \sec^2{4x}}$.  Calculate $f'(90°)$ and $f''(90°)$. Round your answer to the nearest integer.
+Let $f(x)=\frac{2 \tan{4x} }{2 - \sec^2{4x}}$.
+1. Calculate $f'(90°)$. Round your answer to the nearest integer.
+<Practice id="trigonometric-derivative-1" answer="8" indent />
 
-<Practice id="trigonometric-derivative-1" answer="8" placeholder="f'(90°)" />
-<Practice id="trigonometric-derivative-2" answer="0" placeholder="f''(90°)" />
-
-<Explanation>
-**First Derivative:**  
-Recall these trigonometric identities.
-
-$$
-\begin{align*}
-\tan{2x}&=\frac{2\tan{x}}{1-\tan^2{x}}\\
-\tan^2{x}+1&=\sec^2{x}
-\\
-f(x)&=\frac{2\tan{(4x)}}{2-\sec^2{(4x)}}\\
-&=\frac{2\tan{(4x)}}{2-(1+\tan^2{(4x)})}\\
-&=\frac{2\tan{(4x)}}{1-\tan^2{(4x)})}\\
-&=\tan{(8x)}\\
-f'(x)&=8\sec^2{(8x)}\\
-f'\left ( 90° \right )&= 8\\
-\end{align*}
-$$
-
-<br />
-**Second Derivative:**  
-
-Expand $\sec$ to use the product rule.
-$$
-\begin{align*}
-u=v&=\sec{(8x)}\\
-u'=v'&=8\sec{(8x)}\tan{(8x)}\\
-\\
-f'(x)&=8\sec^2{(8x)}\\
-&=8uv\\
-f''(x)&=8(u'v+uv')\\
-&=8(16\sec^2{(8x)}\tan{(8x)})\\
-f''\left ( 90° \right )&=0
-\end{align*}
-$$
-</Explanation>
+2. Calculate $f''(90°)$. Round your answer to the nearest integer.
+<Practice id="trigonometric-derivative-2" answer="0" indent />
