--- a/src/materials/calculus/limits/definition.mdx
+++ b/src/materials/calculus/limits/definition.mdx
@@ -1,4 +1,4 @@
-# What's a Limit? - 1
+# What's a Limit? (1)
 
 Let's use a simple function $f(x) = x^2$.
 
@@ -12,7 +12,7 @@ In this case, since both limits approach to the same value, we can say that the 
 
 ===
 
-# What's a Limit? - 2
+# What's a Limit? (2)
 
 <Theorem title="General Definition of Limit">
 Let $f$ be a function defined on an open interval containing $a$, with the possible exception of $a$ itself (the function $f$ does not need to be defined on $a$), then $\lim\limits_{x\rightarrow a} f(x)=L$ if $f(x)$ can be made as close to $L$ by making $x$ to be sufficiently close to $a$, from both right and left side: $\lim\limits_{x\rightarrow a^+} f(x)=\lim\limits_{x\rightarrow a^-} f(x)=L$.
@@ -40,7 +40,7 @@ The following table summarizes the function $f$:
 
 ===
 
-# What's a Limit? - 3
+# What's a Limit? (3)
 
 Consider another example $f(x)$ and $g(x)$, which graphs are shown below. Sometimes we have to find the limit of a function as $x$ approaches $\infty$ or $-\infty$.  
 
@@ -80,3 +80,10 @@ $x=2$
 <Practice id="determining-limits-2" answer="2" />
 $x=\infty$
 <Practice id="determining-limits-3" answer="1" />
+
+<Explanation>
+Let's establish some facts:
+- Limit of $f$ as $x$ approaches $-2$ from left and right, respectively, are $-\infty$ and $-2$. Since they are different, the limit doesn't exist.
+- Limit of $f$ as $x$ approaches $2$ from left and right, respectively, are $2$ and $2$. Since they are the same, the limit exists.
+- Limit of $f$ as $x$ approaches $\infty$ is $1$, as hinted by the horizontal asymptote on $y=1$.
+</Explanation>
