--- a/src/materials/calculus/limits/discontinuity.mdx
+++ b/src/materials/calculus/limits/discontinuity.mdx
@@ -118,6 +118,7 @@ $$
 ---
 
 In these input boxes, respectively, name all functions that have Jump, Infinite and Removable discontinuity, at the given $x$ value. Functions should be written alphabetically.
+As a note, $h$ is the floor function, where for a value $x$, $h(x)$ is the greatest integer that is less than or equal to $x$.
 
 <Practice id="discontinuity-1" answer="g, h" placeholder="Jump Discontinuity" />
 
