--- a/src/materials/calculus/limits/properties.mdx
+++ b/src/materials/calculus/limits/properties.mdx
@@ -56,7 +56,7 @@ Given that $n$ is any real number, including fractions, the limit of **(the func
 
 ===
 
-# Calculating Limits - Direct Substitution
+# Calculating Limits: Direct Substitution
 
 <Example>
 Evaluate the following limits:
@@ -107,7 +107,7 @@ $$
 
 ===
 
-# Calculating Limits - Alternative Methods
+# Calculating Limits: Alternative Methods
 
 <Example>
 Evaluate the following limits:
@@ -177,10 +177,57 @@ Multiple methods may be required to solve a limit, as shown above.
 
 <Practice id="calculating-limits-1" answer="-12" indent />
 
+<Explanation>
+Let $v = \sqrt{x}$. Since we're converting from one to another variable, the $x$ we're approaching in the limit also changes accordingly. Even if you do not subsitute, **the result will stay the same**.
+
+$$
+\begin{align*}
+\lim_{x\rightarrow 4} \frac{8 - \sqrt{x^3}}{\sqrt{x} - 2} &= \lim_{v\rightarrow 2} \frac{8 - v^3}{v - 2} \\
+&= \lim_{v\rightarrow 2} \frac{- (v^3 - 8)}{v - 2} \\
+&= \lim_{v\rightarrow 2} \frac{- (v - 2)(v^2 + 2v + 4)}{v - 2} \\
+&= \lim_{v\rightarrow 2} -(v^2 + 2v + 4) \\
+&= \lim_{v\rightarrow 2} -(2^2 + 2\times2 + 4) \\
+&= -12 \\
+\end{align*}
+$$
+</Explanation>
+
 2. Evaluate $\lim\limits_{x\rightarrow \infty }(\sqrt{9x^2+6x-3}-3x-4)=...$
 
 <Practice id="calculating-limits-2" answer="-3" indent />
 
+<Explanation>
+$$
+\begin{align*}
+&\lim_{x\rightarrow \infty} [\sqrt{9x^2+6x-3}-3x-4]\\
+&= \lim_{x\rightarrow \infty} [\sqrt{9x^2+6x-3}-(3x+4)] \\
+&= \lim_{x\rightarrow \infty} [\sqrt{9x^2+6x-3}-\sqrt{(3x+4)^2}] \\
+&= \lim_{x\rightarrow \infty} [\sqrt{9x^2+6x-3}-\sqrt{9x^2+24x+16}] \\
+&= \lim_{x\rightarrow \infty} [\sqrt{9x^2+6x-3}-\sqrt{9x^2+24x+16}] \times \frac{[\sqrt{9x^2+6x-3}+\sqrt{9x^2+24x+16}]}{[\sqrt{9x^2+6x-3}+\sqrt{9x^2+24x+16}]}  \\
+&= \lim_{x\rightarrow \infty} \frac{(9x^2+6x-3) - (9x^2+24x+16)}{\sqrt{9x^2+6x-3}+\sqrt{9x^2+24x+16}} \\
+&= \lim_{x\rightarrow \infty} \frac{(-18x - 19)}{\sqrt{9x^2+6x-3}+\sqrt{9x^2+24x+16}} \\
+&= \lim_{x\rightarrow \infty} \frac{(-18 - \frac{19}{x})}{\sqrt{9+\frac{6}{x}-\frac{3}{x^2}}+\sqrt{9+\frac{24}{x}+\frac{16}{x^2}}} \\
+&= \frac{-18}{6} \\
+&= -3 \\
+\end{align*}
+$$
+</Explanation>
+
 3. Consider $f(x) = \sqrt{\frac{1}{4}x^{2}+16x+4}$ and $g(x) = \sqrt{\frac{1}{4}x^{2}+16x-4}$. If both $\lim\limits_{x\rightarrow c} f(x)$ and $\lim\limits_{x\rightarrow c} g(x)$ exists, and also $\lim\limits_{x\rightarrow c} \left [ f(x) + g(x) \right ] = 8$. Evaluate $\lim\limits_{x\rightarrow c} \left [ f(x) - g(x) \right ] = ...$  
 
 <Practice id="calculating-limits-3" answer="1" indent />
+
+<Explanation>
+$$
+\begin{align*}
+\lim\limits_{x\rightarrow c} \left [ f(x) + g(x) \right ] &= 8\\
+\lim\limits_{x\rightarrow c} \left [ f(x) + g(x) \right ] \times \left ( \frac{f(x) - g(x)}{f(x) - g(x)} \right ) &= 8\\
+\lim\limits_{x\rightarrow c} \frac{(f(x))^2 - (g(x))^2}{f(x) - g(x)} &= 8\\
+\lim\limits_{x\rightarrow c} \frac{(\frac{1}{4}x^{2}+16x+4) - (\frac{1}{4}x^{2}+16x-4)}{f(x) - g(x)} &= 8\\
+\lim\limits_{x\rightarrow c} \frac{8}{f(x) - g(x)} &= 8\\
+\frac{1}{\lim\limits_{x\rightarrow c} \frac{8}{f(x) - g(x)}} &= \frac{1}{8}\\
+\lim\limits_{x\rightarrow c} \frac{f(x)-g(x)}{8} &= \frac{1}{8}\\
+\lim\limits_{x\rightarrow c} \left [ f(x) - g(x) \right ] &= 1
+\end{align*}
+$$
+</Explanation>
