chore(content): add missing graph for limit quiz

--- a/src/materials/calculus/limits/quiz.mdx
+++ b/src/materials/calculus/limits/quiz.mdx
@@ -87,6 +87,11 @@ At which following interval(s), if any, is f continuous on?
 
 <Question id="9" ids="input9" />
 
+<Graph
+  functions="(x-3)*(x-3)/8+1@[3,8];(x-3)*(x-3)/33.5+1@[-8,3]"
+  points="1,3~solid;1.477,-1~outline"
+/>
+
 The function $f(x)$ is shown in the above graph. Select all the TRUE statements about $f$.
 
 <Option id="input9" content="The given function is defined at #x=3#." truth />
